--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ canvas.onclick=function(e){
 //点击清空棋子
     reset.onclick=function(){
        confirm("确认清空棋盘？");
-        window.location.href="file:///E:/canvas/wuziqi.html";
+       window.location.reload();
     }
 
 </script>
